@@ -2,10 +2,12 @@ Changes for 0.6.0:
 
 * Fixed issue #22: ra::filesystem::getFilenameWithoutExtension().
 * Fixed issue #23: ra::environment::getEnvironmentVariables().
+* Fixed issue #24: ra::user::getUsername().
+* Fixed issue #25: Get current user system directories.
 * Fixed issue #26: parseBoolean() and toString(bool).
 * Fixed issue #27: createFolder() fails with absolute path.
 * Fixed issue #29: ra::filesystem::copyFile().
-* Fixed issue #31: ra::environment::expand()
+* Fixed issue #31: ra::environment::expand().
 
 Changes for 0.5.0:
 
